# rust-template

./: Cargo.toml  LICENSE  Makefile.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: cargo-deny.yml  rust.yml
crates/database/: Cargo.toml
crates/database/migrations/: 20241220000000_init.sql
crates/database/src/: lib.rs
crates/project_exe/: Cargo.toml
crates/project_exe/src/: main.rs
project_exe/: Cargo.toml
project_lib/: Cargo.toml
project_lib/src/: lib.rs
