[workspace]
members = ["project_lib", "project_exe"]

# Resolver needs to be set for workspaces
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
# Default license and edition
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal workspace dependencies
project_lib = { path = "project_lib" }

# External workspace dependencies
parking_lot = { version = "0.12.1", default-features = false }
